# prettylogging

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/prettylogging/: __init__.py  core.py
tests/: notebook.ipynb
