[project]
name = "prettylogging"
version = "0.1.0"
description = "A pretty logging library for Python"
authors = [
    {name = "AlessandroLovo",email = "alessandro.lovo.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "prettylogging", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
