[project]
name = "prettylogging"
version = "0.1.0"
description = "A pretty logging library for Python"
authors = [
    {name = "AlessandroLovo",email = "alessandro.lovo.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathlib (>=1.0.1,<2.0.0)",
    "datetime (>=6.0,<7.0)",
]

[project.optional-dependencies]
telegram = [
  "python-telegram-handler (>=2.2.1,<3.0.0)"
]


[tool.poetry]
packages = [{include = "prettylogging", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)"
]
