[project]
name = "prettylogging"
version = "0.1.0"
description = "A pretty logging library for Python"
authors = [
    {name = "AlessandroLovo",email = "alessandro.lovo.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathlib (>=1.0.1,<2.0.0)",
    "datetime (>=6.0,<7.0)",
]

[project.optional-dependencies]
telegram = [
  "python-telegram-handler (>=2.2.1,<3.0.0)"
]


[tool.poetry]
packages = [{include = "prettylogging", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 88
# do not auto format
exclude = """
/(
      notebooks,
    | .git,
    | __pycache__,
)/
"""

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["notebooks/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    # omit line-too-long in the linter, there's some edge cases that are ambiguous
    # the formatter will take care of it
    "E501" # line-too-long
]
